--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -6,10 +6,15 @@
 }
 
 .header {
-    background-color: rgb(6, 6, 39);
+    background-color: rgb(18, 20, 20);
     height: 60px;
     width: 100%;
     color: #fff;
+    z-index: 10 !important;
+}
+
+.header__logo img{
+    width: 70px
 }
 
 .header__container {
@@ -17,7 +22,7 @@
     height: 100%;
     justify-content: space-between;
     align-items: center;
-    width: 60%;
+    max-width: 1040px;
     margin: auto;
 }
 
@@ -40,5 +45,6 @@
 }
 
 .header__nav a:hover {
-    background-color: rgb(37, 97, 187);
+    background-color: rgb(22, 57, 108);
+    transition: 200ms;
 }
