--- a/src/components/content/Content.css
+++ b/src/components/content/Content.css
@@ -1,15 +1,57 @@
-.content__card {
-    width: 120px;
-    height: 80px;
-    background-color: rgb(92, 92, 92);
-    border-radius: 29px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.content {
+   height: 100vh;
 }
 
 .content__container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 1040px;
+    margin: auto;
+    background-color: rgb(252, 252, 249);
+    box-shadow: 4px 20px 90px;
+    height: 100%;
+    flex-wrap: wrap;
+}
+.content__cardsStart {
+    margin-top: 20px;
+    margin-bottom: 45px;
+}
+
+.content__cardsEnd {
+    margin-bottom: 20px;
+}
+
+.content__table {
+    background-color: #bebebe;
+    width: 370px;
+    outline: solid 1px black;
+}
+
+.content__table tr:nth-child(1) {
+    background-color: #858585;
+}
+
+.content__tableTitle {
+    background-color: rgb(19, 19, 19);
+    outline: solid 1px black;
+    border-radius:3px 3px 0 0;
+    color: #fff;
+    text-align: center;
+}
+
+
+.content__totalValue{
+    background-color: rgb(59, 3, 3);
+    outline: 1px solid black;
+    border-radius: 0 0 5px 5px;
+    color: #fff;
+    text-align: center;
+}
+
+@media screen and (max-width: 750px ){
+    .content__container{
+        height: max-content !important;
+        box-shadow: none;
+    }
 }
