--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 .footer {
     height: 250px;
     background-color: rgb(32, 35, 35, 1);
@@ -7,9 +12,6 @@
 }
 
 .footer__container {
-    height: 90%;
-    max-width: 2040px;
-    min-width: 1040px;
     margin: auto;
     display: flex;
     justify-content: space-between;
@@ -19,6 +21,7 @@
 .footer__logo {
     display: flex;
     align-items: center;
+    margin-right: 150px;
 }
 
 .footer__logo img{
@@ -110,3 +113,8 @@
     transition: 200ms;
 }
 
+@media screen and (max-width: 750px) {
+    .footer {
+        display: none;
+    }
+}
